test/invalid-semantics/57551_record_type_duplicate_field/record_type_duplicate_field.mag
-- Author: 57551, Eduardo Proença

-- record types must have disjoint field labels

fun f(r) : {x: Int, x: Bool} -> Int = 0

fun main (_) : Unit -> Unit =
    print(f({x = 1}))